# MiniNetTalk

./: CMakeLists.txt
doc/: ninitalk.xml
include/server/: config.hpp  http_session.hpp  listener.hpp  shared_state.hpp  websocket_session.hpp
src/: CMakeLists.txt  main.cpp
src/example/: daytime-client.cpp  http_example.cpp
src/server/: common.hpp  config.hpp  config_reader.cpp  http_session.cpp  http_session.hpp  listener.hpp  main.cpp  server.cpp  shared_state.cpp  shared_state.hpp  websocket_session.cpp  websocket_session.hpp
static/: index.html
